# neuralzoo

./: .gitignore  README.md  lint.sh  pyproject.toml
neuralzoo/evaluator/: model_metrics.py
neuralzoo/loader/: load_data.py
neuralzoo/model/: cnn.py  mlp.py
neuralzoo/notebook/: exploratory.ipynb
neuralzoo/selector/: random_selection.py
neuralzoo/transformer/: one_hot_encoder.py
neuralzoo/visualization/: image_loader.py  metrics.py
watch/: bibliohraphy.md  cnn.md  mlp.md
