[tool.poetry]
name = "neuralzoo"
version = "0.1.0"
description = ""
authors = ["alexandre-assad <alexandre.assad@laplateforme.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
