[project]
name = "neuralzoo"
version = "0.1.0"
description = ""
authors = [{ name = "alexandre-assad", email = "alexandre.assad@laplateforme.io" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "numpy>=2.2.5,<3",
    "pandas>=2.2.3,<3",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
